Tune menu to prevent jumping

--- a/content/stylesheet.sass
+++ b/content/stylesheet.sass
@@ -161,10 +161,13 @@ body
     #nav_detailed_welcome
       ul
         padding-top: 0px
+        padding-bottom: 0px
+        margin-bottom: 0px
         li
+          padding: 5px
           margin-left: -3.5em
           span
-            height: 3.5em
+            height: 3.1em
             display: table-cell
             vertical-align: middle
             font: 400 0.9em/1.5 Georgia, serif
